...
    <string name="video_quality_value_fhd_info">Full High Definition (FHD) 1080p video quality.</string>
    <string name="video_quality_value_uhd_info">Ultra High Definition (UHD) 2160p video quality.</string>


    <!-- disabled rationale strings-->

    <string name="device_unsupported">%1$s is unsupported by the device</string>
    <string name="fps_unsupported"> %1$s is unsupported at %2$d fps</string>
    <string name="stabilization_unsupported">%1$s is unsupported by the current stabilization</string>
    <string name="current_lens_unsupported">%1$s is unsupported by the current lens</string>
    <string name="rear_lens_unsupported">%1$s is unsupported by the rear lens</string>
    <string name="front_lens_unsupported">%1$s is unsupported by the front lens</string>
    <string name="video_quality_unsupported">%1$s is unsupported by the current video quality</string>
...
    <string name="front_lens_rationale_prefix">Front lens</string>
    <string name="rear_lens_rationale_prefix">Rear lens</string>
    <string name="no_fixed_fps_rationale_prefix">Fixed frame rate</string>

    <string name="mute_audio_rationale_prefix">Mute</string>
    <string name="save_location_rationale_prefix" description="Prefix title for save location rationale. [CHAR LIMIT=30]">Save Location</string>
    <string name="concurrent_camera_rationale_prefix">Concurrent camera</string>

    <!-- Rationale texts -->
    <string name="stabilization_active_unsupported">%1$s is unsupported when Video Stabilization is enabled</string>
    <string name="fixed_fps_active_unsupported">%1$s is unsupported when a fixed frame rate is selected</string>
    <string name="flash_llb_active_unsupported">%1$s is unsupported when Low Light Boost is active</string>
    <string name="hdr_active_unsupported">%1$s is unsupported when HDR is active</string>
...
