<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2026 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="toast_image_capture_success">Image Capture Success</string>
    <string name="toast_video_capture_external_unsupported">Video not supported while app is in image-only capture mode</string>
    <string name="toast_image_capture_external_unsupported">Image capture not supported while app is in video-only capture mode</string>
    <string name="toast_video_capture_success">Video Capture Success</string>
    <string name="toast_video_capture_failure">Video Capture Failure</string>
    <string name="toast_capture_failure">Image Capture Failure</string>
</resources>